--- a/testtask/Base.lproj/Main.storyboard
+++ b/testtask/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KF8-3Z-m1a">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KF8-3Z-m1a">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -15,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="uc6-wm-s8l"/>
+                        <segue destination="Szg-Br-FeP" kind="relationship" relationship="rootViewController" id="sU2-jZ-Sz6"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PMt-dy-j0s" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,150 +26,25 @@
             <point key="canvasLocation" x="-227" y="426"/>
         </scene>
         <!--Gallery-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="3Vs-oL-Rb4">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="testtask" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="s39-F6-3KO">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="kvO-0q-eXv"/>
-                                </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Oz2-54-1NE">
-                                <rect key="frame" x="0.0" y="108" width="600" height="513"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YBK-gh-EeT">
-                                    <size key="itemSize" width="224" height="213"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="xtw-gS-wDx" customClass="CellForPicture" customModule="testtask" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="224" height="213"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="224" height="213"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uQ3-Pt-oun">
-                                                    <rect key="frame" x="13" y="13" width="202" height="146"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zx6-Fj-LF2">
-                                                    <rect key="frame" x="8" y="172" width="207" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="W88-Lq-mzh">
-                                                    <rect key="frame" x="102" y="97" width="20" height="20"/>
-                                                </activityIndicatorView>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <size key="customSize" width="224" height="213"/>
-                                        <connections>
-                                            <outlet property="loadIndicator" destination="W88-Lq-mzh" id="Q5G-b0-Dyv"/>
-                                            <outlet property="nameOfPicture" destination="Zx6-Fj-LF2" id="R5c-cO-UVw"/>
-                                            <outlet property="previewPic" destination="uQ3-Pt-oun" id="Xk4-pn-Nhj"/>
-                                            <segue destination="gud-7S-q2u" kind="show" identifier="showSequence" id="Jqh-RM-IVn"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="Oz2-54-1NE" secondAttribute="trailing" constant="-20" id="OH6-xB-anI"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="s39-F6-3KO" secondAttribute="trailing" constant="-20" id="WHM-2a-lZR"/>
-                            <constraint firstItem="s39-F6-3KO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="YQr-jp-zq9"/>
-                            <constraint firstItem="Oz2-54-1NE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="aVr-W4-Dtf"/>
-                            <constraint firstItem="Oz2-54-1NE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="108" id="lvb-3L-1Fe"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Oz2-54-1NE" secondAttribute="bottom" id="pnA-a4-gNc"/>
-                            <constraint firstItem="s39-F6-3KO" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="uim-PP-2Uc"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Gallery" id="EtR-Aj-pez"/>
+                <viewController id="Szg-Br-FeP" customClass="GalleryViewController" customModule="testtask" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="Gallery" id="2Fr-eu-mn9"/>
                     <connections>
-                        <outlet property="collectionView" destination="Oz2-54-1NE" id="aln-HU-whh"/>
-                        <outlet property="searchBar" destination="s39-F6-3KO" id="FUK-Va-vK4"/>
-                        <outlet property="searchDisplayController" destination="gn0-B0-813" id="sD6-lD-Hre"/>
+                        <segue destination="SHj-lo-wlC" kind="presentation" identifier="showImage" modalTransitionStyle="crossDissolve" id="WQm-6Z-bMZ"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="gn0-B0-813">
-                    <connections>
-                        <outlet property="delegate" destination="BYZ-38-t0r" id="J0s-CC-Rk9"/>
-                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="DWi-IM-5EB"/>
-                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="lkz-yc-dfv"/>
-                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="CNS-rq-UzG"/>
-                    </connections>
-                </searchDisplayController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aAJ-jf-QXl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="448" y="426"/>
+            <point key="canvasLocation" x="530" y="426"/>
         </scene>
-        <!--Image-->
-        <scene sceneID="0Y8-Nn-ghF">
+        <!--Image View Controller-->
+        <scene sceneID="4AF-CY-88O">
             <objects>
-                <viewController id="gud-7S-q2u" customClass="ImageViewController" customModule="testtask" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="EvV-PW-EKa"/>
-                        <viewControllerLayoutGuide type="bottom" id="fnG-Bs-JEN"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="gh4-Gc-7ve">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBp-uD-0zP">
-                                <rect key="frame" x="227" y="536" width="146" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="2ZO-fm-Fbj"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Send Email"/>
-                                <connections>
-                                    <action selector="sendEmail:" destination="gud-7S-q2u" eventType="touchUpInside" id="0j2-vU-wGW"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k2q-Xd-QZ1">
-                                <rect key="frame" x="20" y="72" width="560" height="398"/>
-                            </imageView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="QqB-fF-95f">
-                                <rect key="frame" x="282" y="252" width="37" height="37"/>
-                                <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="k2q-Xd-QZ1" firstAttribute="trailing" secondItem="gh4-Gc-7ve" secondAttribute="trailingMargin" id="3jN-vd-oTa"/>
-                            <constraint firstItem="QqB-fF-95f" firstAttribute="centerX" secondItem="k2q-Xd-QZ1" secondAttribute="centerX" id="Gid-mR-MAG"/>
-                            <constraint firstItem="k2q-Xd-QZ1" firstAttribute="top" secondItem="EvV-PW-EKa" secondAttribute="bottom" constant="8" id="HJg-1Q-MfH"/>
-                            <constraint firstItem="QqB-fF-95f" firstAttribute="centerY" secondItem="k2q-Xd-QZ1" secondAttribute="centerY" id="OyF-WE-f1R"/>
-                            <constraint firstItem="aBp-uD-0zP" firstAttribute="centerX" secondItem="gh4-Gc-7ve" secondAttribute="centerX" id="RX8-43-AR1"/>
-                            <constraint firstItem="k2q-Xd-QZ1" firstAttribute="leading" secondItem="gh4-Gc-7ve" secondAttribute="leadingMargin" id="SZe-wU-bX4"/>
-                            <constraint firstItem="fnG-Bs-JEN" firstAttribute="top" secondItem="k2q-Xd-QZ1" secondAttribute="bottom" constant="130" id="upi-qf-tMG"/>
-                            <constraint firstItem="fnG-Bs-JEN" firstAttribute="top" secondItem="aBp-uD-0zP" secondAttribute="bottom" constant="34" id="yBf-eQ-ZRt"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Image" id="9xj-pu-ItB"/>
-                    <connections>
-                        <outlet property="img" destination="k2q-Xd-QZ1" id="6Pj-Dp-sLi"/>
-                        <outlet property="loadIndicator" destination="QqB-fF-95f" id="xpP-Jd-BED"/>
-                        <outlet property="sendButton" destination="aBp-uD-0zP" id="0Xz-3h-hpx"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="R90-K8-YAp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="SHj-lo-wlC" customClass="ImageViewController" customModule="testtask" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4TL-gA-NED" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1151" y="426"/>
+            <point key="canvasLocation" x="1249" y="426"/>
         </scene>
     </scenes>
 </document>
